[package]
name = "dbfs-rust-hotpath"
version = "0.1.0"
edition = "2021"

[lib]
name = "dbfs_rust_hotpath"
path = "src/lib.rs"

[[bin]]
name = "copy-plan"
path = "src/bin/copy-plan.rs"

[[bin]]
name = "copy-pack"
path = "src/bin/copy-pack.rs"

[[bin]]
name = "read-assemble"
path = "src/bin/read-assemble.rs"
